fix: filter Metadata from the Certificate audits
fixes AM-5144